Fix jumping page on mobile

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,22 +1,26 @@
 .navbar-items {
-    .far {
-        position: fixed;
-        top     : 500px;
-        right   : 200px;
-    }
 
     // Positioning
-    position       : fixed;
-    z-index        : 2;
-    top            : 0px;
+    position          : fixed;
+    z-index           : 2;
+    top               : 0px;
     // Display & Box Model
-    display        : flex;
-    justify-content: space-between;
-    align-items    : center;
-    width          : 100%;
-    height         : 80px;
+    display           : flex;
+    justify-content   : space-between;
+    align-items       : center;
+    width             : 100%;
+    height            : 80px;
+    // background     : url("../assets/images/bg.jpg") top no-repeat;
+    // background-size: cover;
 
-    transition: top 0.5s;
+    transition: top 0.7s;
+
+    // @media screen and (max-width: 800px) {
+    //     position  : relative;
+    //     transition: none;
+    // }
+
+    ;
 
     &.animate {
         top: -100px;
@@ -153,9 +157,17 @@ ul li:last-of-type {
 }
 
 @media screen and (max-width: 800px) {
+    .navbar-items {
+        .nav-menu {
+            li {
+                .dropdown-menu {
+                    display: none;
+                }
+            }
+        }
+    }
 
     @media screen and (max-device-width: 800px) {
-
         .navbar-items {
             height: 75px;
 
@@ -163,13 +175,6 @@ ul li:last-of-type {
                 top: -100px;
             }
 
-            .nav-menu {
-                li {
-                    .dropdown-menu {
-                        display: none;
-                    }
-                }
-            }
         }
     }
 
@@ -184,6 +189,12 @@ ul li:last-of-type {
 
         @media screen and (max-device-width: 800px) {
             width: 50%;
+
+            li {
+                .dropdown-menu {
+                    display: none;
+                }
+            }
         }
 
         max-width: none;
@@ -237,7 +248,7 @@ ul li:last-of-type {
             }
         }
 
-        transition: all 0.75s ease;
+        transition: all 0.7s ease;
 
         &.active {
             z-index: 5;
@@ -247,7 +258,7 @@ ul li:last-of-type {
             background-color: transparent;
             opacity         : 1;
 
-            transition: all 0.75s ease;
+            transition: all 0.7s ease;
 
             .close-popup-area {
                 display: initial;
